fixed text box alignment on page

--- a/frontend/components/CSS/App.css
+++ b/frontend/components/CSS/App.css
@@ -92,6 +92,22 @@ h1 {
   padding-bottom: 40px;
   box-shadow: 7px 4px 4px rgb(0, 255, 247);
   vertical-align: top;
+  margin: 6.8vw 5vw;
+  min-width: 400px;
+}
+
+.Graphs-description {
+  width: 35vw;
+  display: inline-block;
+  font-size: 30px;
+  border: 2px;
+  border-style: solid;
+  border-radius: 20px;
+  padding: 10px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  box-shadow: 7px 4px 4px rgb(0, 255, 247);
+  vertical-align: top;
   margin: 5vw 5vw;
   min-width: 400px;
 }
